--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.24",
+    "i18next": "^23.10.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.0",
+    "react-icons": "^5.0.1",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
