--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
